<resources>
    <string name="app_name">Yennkasa</string>
    <string name="action_logout">Log out</string>
    <string name="title_activity_set_up">Get Started</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_button_label">Sign Up!</string>
    <string name="phone_hint">Phone No.</string>
    <string name="log_in_button_label">LOG IN</string>
    <string name="error">ERROR</string>
    <string name="title_activity_chat">Chat</string>
    <string name="action_settings">Settings</string>
    <string name="verify">Verify</string>
    <string name="content_desc_user_avatar">user DP thumbnail</string>
    <string name="st_empty_contacts">It\'s Lonely Here, No contact</string>
    <string name="action_call_sender">Call sender</string>
    <string name="action_delete_conversation">Delete conversation</string>
    <string name="title_pick_recipient">Pick recipient</string>
    <string name="action_attach">Attach</string>
    <string name="error_sorry_no_application_to_open_file">No App on your phone can open this file type
    </string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_profile">Profile</string>
    <string name="error_occurred">Sorry an error occurred</string>
    <string name="error_canceled">Canceled</string>
    <string name="dp_changed_successfully">DP changed successfully</string>
    <string name="error_invalid_bitmap_file">Choose a valid image</string>
    <string name="add_picture">Add Picture</string>
    <string name="change_dp">Change</string>
    <string name="edit_username">Edit name</string>
    <string name="display_picture">Display picture</string>
    <string name="username_placeholder">Username</string>
    <string-array name="attach_options">
        <item>Take Picture</item>
        <item>Record Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
        <item>Choose File</item>
    </string-array>
    <string name="add">ADD</string>
    <string name="add_peers_title">Add Peers To Chat</string>
    <string name="title_invite_friends">Invite Friends</string>
    <string name="st_done">Done</string>
    <string name="st_please_wait">Please Wait…</string>
    <string name="st_group_name">Group Name</string>
    <string name="shared_groups">Shared Groups</string>
    <string name="st_group_members">Group Members</string>
    <string name="st_success">Success</string>
    <string name="st_choose_a_different_image">This image is already your DP.Choose a different one
    </string>
    <string name="st_error">Error</string>
    <string name="st_view_profile">View Profile</string>
    <string name="st_group_info">Group Info</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="st_group_members_title">" - Members"</string>
    <string name="message">Message</string>
    <string name="you">You</string>
    <string name="admin">Admin</string>
    <string name="leave">Leave</string>
    <string name="call">Call</string>
    <string name="st_verification_notice">@string/st_hint_et_verification</string>
    <string name="st_hint_et_verification">Verification Code</string>
    <string name="st_complete_setup">Complete Setup</string>
    <string name="st_send_verification_notice">Enter the code you received.\nYou may try again if you don\'t receive it after 5 minutes
    </string>
    <string name="st_unknown">Unknown</string>
    <string name="st_offline">offline</string>
    <string name="st_online">online</string>
    <string name="st_no_mutual_group">You do not share any group with this user</string>
    <string name="st_could_not_create_group">Failed to create group.Add at least two members
    </string>
    <string name="st_send_again">Resend Code</string>
    <string name="st_invalid_phone_number_message">The phone number, <b>%s</b>, may not be valid in your country. Are you sure you want to continue?
    </string>
    <string name="st_understand">I UNDERSTAND</string>
    <string name="st_invalid_phone_number_title">Potentially invalid phone number</string>
    <string name="send">Send</string>
    <string name="yes">Yes</string>
    <string name="st_forward">Forward</string>
    <string name="select_recipients">Select Recipients</string>
    <string name="no_app_for_content_sharing">You have no application for sharing content</string>
    <string name="title_activity_create_group">Create Group</string>
    <string name="st_unable_to_connect">Unable to connect. Check your internet settings</string>
    <string name="next">Next</string>
    <string name="cant_be_empty">This field cannot be empty</string>
    <string name="st_prompt">Prompt</string>
    <string name="st_sure_to_exit">All progress will be lost</string>
    <string name="st_add">Add</string>
    <string name="i_know">I Know</string>
    <string name="invite_member">Invite Friends</string>
    <string name="action_create_group">Create Group</string>
    <string name="st_content_description_image_preview">preview of media messages</string>
    <string name="st_message_state_pending">pending</string>
    <string name="st_message_state_failed">failed</string>
    <string name="st_message_state_delivered">delivered</string>
    <string name="st_message_state_seen">seen</string>
    <string name="st_message_state_sent">sent</string>
    <string name="sorry_no_dp">no photo to display</string>
    <string name="loading">Loading…</string>
    <string name="initialising">Taking care of few things…</string>
    <string name="new_message">New Message</string>
    <string name="message_from">"New message(s) from %s"</string>
    <string name="subtitle">Stay Never Disconnected!</string>
    <string name="select_country">Select Your Country</string>
    <string name="dont_have_an_account_sign_up">Don\'t have an account? Sign up!</string>
    <string name="st_already_have_an_account">Already have an account? Log In!</string>
    <string name="required_field_error">%s can\'t be empty</string>
    <string name="password_too_short">Password too short</string>
    <string name="password_too_long">Password too long</string>
    <string name="user_name_format_message">"User names can only contain letters,underscore and digits and must be between 2 to 12 characters"
    </string>
    <string name="group_name_format_message">"Group names can only contain letters and digits and must be between 5 to 30 characters"
    </string>
    <string name="token_required">Enter a the code you received via SMS</string>
    <string name="invalid_phone_number">%s is not a valid phone number</string>
    <string name="close">CLOSE</string>
    <string name="charges_may_apply">Standard charges from your operator may apply</string>
    <string name="new_message_from">New message from</string>
    <string name="and">" and "</string>
    <string name="others">" others "</string>
    <string name="group_already_exists">"There is already a group with the name %s "</string>
    <string name="now">now</string>
    <string name="no_message">No message</string>
    <string name="error_failed_to_open_image">Failed to open image</string>
    <string name="sure_you_want_to_delete_conversation">Sure you want to delete this conversation? All messages will be lost
    </string>
    <string name="no">NO</string>
    <string name="group">group</string>
    <string name="forward_to">Forward to…</string>
    <string name="enter_a_number">Enter a valid phone number</string>
    <string name="dissolve_group">Dissolve</string>
    <string name="phone">Phone</string>
    <string name="groups_you_share_in_common">Groups you share in common</string>
    <string name="Members">" Members"</string>
    <string name="error_file_too_large">File is either too large or invalid</string>
    <string name="leave_group_prompt">Sure you want to leave group? all messages received from this group will be lost.
    </string>
    <string name="busy">busy</string>
    <string name="country">Your country</string>
    <string name="no_name">No name</string>
    <string name="verification_token_message">"Hello the following number is your verification code: "
    </string>
    <string name="invalid_message">Message Invalid, Ensure the message does not exceed the size limit
    </string>
    <string name="invite_message">"Try out Yennkasa, an instant messenger for android. Using the app, I can share anything not only pictures and text.It\'s free and fast! \n Download here: https://yennkasa.com/dl
    </string>
    <string name="sinch_error_report_message">we are having trouble setting things up,ensure your are connected to the internet and that your date is correct
    </string>
    <string name="st_unable_to_connect_version_2">@string/st_unable_to_connect</string>
    <string name="sample_date">2/23/12</string>
    <string name="typing_message">typingMessage</string>
    <string name="ellipsis">…</string>
    <string name="sampleDate">12–12–12</string>
    <string name="play_download_content_description">play_or_download</string>
    <string name="not_group">You are not yet a member of any group</string>
    <string name="invalid_verification_token">Invalid verification code</string>
    <string name="invite">Invite</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="nothing_to_display">Nothing to display</string>
    <string name="image_size_too_large">Image size exceeds 8MB</string>
    <string name="invalid_image">Invalid image</string>
    <string name="not_a_bitmap">Not a bitmap</string>
    <string name="add_custom">Add custom number</string>
    <string name="title_activity_create_message">New Message</string>
    <string name="message_box_hint">Type here…</string>
    <string name="st_group_name_hit">Name, e.g Brothers From One Hood</string>
    <string name="content_description_remove_attachment">remove attachment</string>
    <string name="send_to">Send to…</string>
    <string name="file_not_found">can\'t forward, file not found</string>
    <string name="unknown">Unknown</string>
    <string name="no_contact_on_yennkasa_notice_cap">LISTEN, YOU CURRENTLY DON\'T HAVE ANYONE IN YOUR CONTACTS USING YENNKASA.\n\n QUICKLY INVITE THEM FOR A NICE CHAT EXPERIENCE.
    </string>
    <string name="title_activity_login_signup_prompt">@string/app_name</string>
    <string name="pick_an_optional_dp">Pick an optional display picture for the group</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="later">Later</string>
    <string name="feedback_subject">Title (optional)</string>
    <string name="helper_feedback_subject">at most 40 letters</string>
    <string name="add_device_info">Include System Information</string>
    <string name="submit">Submit</string>
    <string name="app_name_cap">YENNKASA</string>
    <string name="idea_inc">© Yennkasa.</string>
    <string name="add_contact">Add to contacts</string>
    <string name="feedback_hint">Suggestions,feature requests,bug reports,…</string>
    <string name="action_delete">Delete message</string>
    <string name="answer">Answer</string>
    <string name="end_call">End Call</string>
    <string name="decline">Decline</string>
    <string name="mute_call">mute</string>
    <string name="speaker">speaker</string>
    <string name="action_edit_and_send">Edit and send</string>
    <string name="calls">Calls</string>
    <string name="conversation">Conversations</string>
    <string name="people">People</string>
    <string name="groups">Groups</string>
    <string name="terms">By Proceeding, You Accept Our <a href="yennkasa.com/terms">Terms And Agreement</a></string>
    <string name="welcome_text2">Hi,\n Thanks For Installing Yennkasa.\n Let\'s Get Started</string>
    <string name="agree_and_continue">Agree And Continue</string>
</resources>