<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pairapp.ui.ChatActivity">
    <item
        android:id="@+id/action_invite_friends"
        android:orderInCategory="100"
        android:title="@string/invite_member"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_call_user"
        android:icon="@drawable/ic_phone_white"
        android:orderInCategory="100"
        android:title="@string/call"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_attach"
        android:icon="@drawable/ic_action_new_attachment_white"
        android:orderInCategory="100"
        android:title="@string/action_attach"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_contact"
        android:title="@string/add_contact"
        app:showAsAction="never" />
</menu>
