<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/tab_call"
        android:enabled="true"
        android:icon="@drawable/ic_history_white_24dp"
        android:title="@string/calls"
        app:showAsAction="always" />
    <item
        android:id="@+id/tab_conversation"
        android:enabled="true"
        android:icon="@drawable/ic_conversation_white__24dp"
        android:title="@string/conversation"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/tab_people"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/people"
        app:showAsAction="always" />
    <item
        android:id="@+id/tab_groups"
        android:enabled="true"
        android:icon="@drawable/ic_groups_24dp"
        android:orderInCategory="100"
        android:title="@string/groups"
        app:showAsAction="always" />
</menu>
