<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yennkasa="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/ic_forward_white_24dp"
        android:title="@string/st_forward"
        yennkasa:showAsAction="always" />
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/abc_ic_menu_copy_mtrl_am_alpha"
        android:title="@android:string/copy"
        yennkasa:showAsAction="always" />
    <item
        android:id="@+id/action_edit_sent"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:title="@string/action_edit_and_send"
        yennkasa:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/action_delete"
        yennkasa:showAsAction="always" />
</menu>
