<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pair.pairapp.ui.VerificationFragment">

    <TextView
        android:id="@+id/tv_verification_notice"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_above="@+id/et_verification"
        android:text="@string/st_send_verification_notice" />
    <Button
        android:id="@+id/bt_send_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/send"/>
    <Button
        android:id="@+id/bt_cancel_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        android:layout_below="@+id/bt_send_verification"
        android:layout_alignRight="@+id/bt_send_verification"
        />
    <EditText
        android:layout_margin="5dp"
        android:id="@+id/et_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:inputType="number"
        android:visibility="invisible"
        android:hint="@string/st_hint_et_verification"
        />
    <Button
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:id="@+id/bt_complete_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_verification"
        android:text="@string/st_complete_setup"/>
</RelativeLayout>
