<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context="com.pairapp.ui.CallActivity">

    <include layout="@layout/snack_bar" />

    <include layout="@layout/inline_notification_bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="3">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/default_gap"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark" />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.pairapp.view.RoundedImageView
            android:id="@+id/iv_user_avatar"
            android:layout_width="@dimen/dp_thumbnail_width_large"
            android:layout_height="@dimen/dp_thumbnail_height_large"
            android:layout_marginBottom="@dimen/default_gap"
            android:src="@drawable/user_avartar" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_gap"
            tools:text="\@yaa_aminu" />

        <TextView
            android:id="@+id/tv_call_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="dialing" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal">


        <Button
            android:id="@+id/bt_mute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_gap"
            android:layout_weight="1"
            android:text="@string/mute_call" />

        <Button
            android:id="@+id/bt_answer_call"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_gap"
            android:layout_weight="1"
            android:text="@string/answer" />


        <Button
            android:id="@+id/bt_end_call"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_gap"
            android:layout_weight="1"
            android:text="@string/end_call" />

        <Button
            android:id="@+id/bt_decline_call"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_gap"
            android:layout_weight="1"
            android:text="@string/decline" />


        <Button
            android:id="@+id/bt_speaker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_gap"
            android:layout_weight="1"
            android:text="@string/speaker" />
    </LinearLayout>
</FrameLayout>
