<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding_ll_login_fragment_bottom"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.idea.ui.FeedBackFragment">

    <com.rey.material.widget.EditText
        android:id="@+id/et_feedback_subject"
        style="@style/Material.Widget.EditText.Light"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feedback_subject"
        android:singleLine="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:textColor="#FF000000"
        app:et_dividerErrorColor="#FFFF0000"
        app:et_helper="@string/helper_feedback_subject"
        app:et_inputId="@+id/feedback_subject_id"
        app:et_labelTextColor="@drawable/color_label"
        app:et_labelTextSize="@dimen/standard_text_size"
        app:et_supportMaxChars="40"
        app:et_supportMode="charCounter"
        app:et_supportSingleLine="true"
        app:et_supportTextErrorColor="#FFFF0000"
        app:et_supportTextSize="@dimen/edit_text_size"/>

    <EditText
        android:id="@+id/et_feedback_body"
        style="@style/feedback_edittext_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/padding_ll_login_fragment_bottom"
        android:layout_weight="0.5"
        android:gravity="top"
        android:hint="@string/feedback_hint"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <com.rey.material.widget.CheckBox
            android:id="@+id/cb_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            />

        <TextView
            android:id="@+id/tv_add_device_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_device_info"
            android:textColor="@color/black"
            android:textSize="@dimen/standard_text_size"/>


        <com.rey.material.widget.Button
            android:id="@+id/bt_submit"
            style="@style/FlatWaveColorButtonRippleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners"
            android:padding="@dimen/padding_button"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/standard_text_size"/>
    </LinearLayout>
</LinearLayout>
