<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/terms_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/default_gap">

        <TextView
            fontPath="Roboto-Light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/welcome_text2"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/white"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/agree_and_continue"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:autoLink="web"
            android:clickable="true"
            android:gravity="center"
            android:linksClickable="true"
            android:paddingTop="@dimen/padding_ll_login_fragment_top"
            android:text="@string/terms"
            android:textColor="@color/white"
            android:textColorLink="#00f"
            android:textSize="12sp" />

        <Button
            android:id="@+id/agree_and_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/white_rect_back_ground"
            android:text="@string/agree_and_continue" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/splash_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_fragment_back_ground"
        android:padding="@dimen/default_gap">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name_cap"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size_large" />

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_app_name"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/padding_ll_login_fragment_bottom"
            android:textColor="@color/white"
            android:textSize="@dimen/standard_text_size_small"
            tools:text="5.24.2" />


        <TextView
            android:id="@+id/copy_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/padding_ll_login_fragment_bottom"
            android:text="@string/idea_inc"
            android:textColor="@color/white"
            android:textSize="@dimen/standard_text_size"
            android:textStyle="bold" />
    </RelativeLayout>

</FrameLayout>
